--- a/my-app/src/Components_styling/Genconian_styling.css
+++ b/my-app/src/Components_styling/Genconian_styling.css
@@ -22,3 +22,10 @@
     flex-wrap: wrap;
     margin-left: 12rem;
 }
+@media only Screen and (max-width: 590px)
+{
+    .container_genconian .all_cards
+    {
+        margin-left: 3.5rem;
+    }   
+}
