--- a/my-app/src/Components_styling/Navbar_style.css
+++ b/my-app/src/Components_styling/Navbar_style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     color: white;
+    scroll-behavior: smooth;
 }
 body
 {
@@ -19,7 +20,8 @@ body
 } */
 .container
 {
-    position: sticky;
+    margin-top: -1rem;
+    position: fixed;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
